--- a/package.json
+++ b/package.json
@@ -8,5 +8,10 @@
   "dependencies": {
     "react": "15.3.1",
     "react-native": "0.32.0"
+  },
+  "devDependencies": {
+    "macaca-utils": "^0.1.8",
+    "macaca-wd": "^1.0.8",
+    "path": "^0.12.7"
   }
 }
