--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,4 @@ language: node_js
 node_js:
   - "6"
 before_script:
-  - npm install -g macaca-cli macaca-electron macaca-ios macaca-android macaca-chromemacaca
+  - npm install -g macaca-cli macaca-electron macaca-ios macaca-android macaca-chrome
