--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "dependencies": {
     "react": "15.3.1",
-    "react-native": "0.32.0"
+    "react-native": "0.32.0",
+    "react-native-image-crop-picker": "^0.8.2"
   },
   "devDependencies": {
     "jshint": "*",
